# File2Package.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
File2Package/: BackendsDiscoverer.py  __init__.py  __main__.py  database.py  interfaces.py
